# brill

./: CMakeLists.txt  config.toml  config.toml.example
include/: utils.h
include/analysis/: cli.h  file_name.h  geometry.h  ppac.h  t0.h  tree.h
include/energy_calculator/: delta_energy_calculator.h  lost_energy_calculator.h  range_energy_calculator.h
include/event/: particle_event.h
include/event/ingot/: beam_event.h  csi_event.h
include/event/ppac/: ppac_hit_event.h  ppac_track_event.h
include/event/t0/: t0_event.h
include/rebuild/: constants.h  particle.h
include/t0/: dssd.h
src/: CMakeLists.txt  config.cpp
src/analysis/: cli.cpp  dssd.cpp  file_name.cpp  geometry.cpp  ppac.cpp  t0.cpp
src/brill/: CMakeLists.txt
src/brill/include/: config.h  utils.h
src/brill/include/event/forge/: align_event.h  csi_event.h  ppac_event.h  tafd_event.h  trigger_event.h
src/brill/include/event/ingot/: dssd_event.h  silicon_event.h  vme_event.h
src/brill/include/event/t0/: dssd_match_event.h
src/brill/include/rebuild/: nuclear_data.h
src/brill/include/t0/: dssd.h
src/brill/src/: CMakeLists.txt  config.cpp
src/brill/src/event/: CMakeLists.txt  particle_event.cpp
src/brill/src/event/forge/: align_event.cpp  beam_event.cpp  csi_event.cpp  ppac_event.cpp  silicon_event.cpp  tafd_event.cpp  trigger_event.cpp  vme_event.cpp
src/brill/src/event/ingot/: CMakeLists.txt  beam_event.cpp  csi_event.cpp  dssd_event.cpp  ppac_event.cpp  silicon_event.cpp  trigger_event.cpp  vme_event.cpp
src/brill/src/event/t0/: CMakeLists.txt  dssd_match_event.cpp
src/brill/src/rebuild/: CMakeLists.txt  nuclear_data.cpp
src/brill/src/t0/: CMakeLists.txt  dssd.cpp
src/energy_calculator/: CMakeLists.txt  delta_energy_calculator.cpp  lost_energy_calculator.cpp  range_energy_calculator.cpp
src/event/: CMakeLists.txt
src/event/ingot/: CMakeLists.txt  align_event.cpp  csi_event.cpp  tafd_event.cpp  trigger_event.cpp
src/event/ppac/: ppac_hit_event.cpp  ppac_track_event.cpp
src/event/t0/: CMakeLists.txt  t0_event.cpp
src/rebuild/: CMakeLists.txt  particle.cpp
src/t0/: CMakeLists.txt
